[package]
name = "christmas"
version = "0.1.0"
edition = "2021"
description = "wasm app to be used as an e-christmas card"
readme = "README.md"
repository = ""
license = ""
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }

# [profile.release]
# strip = true
# opt-level = "s"
# lto = true
# codegen-units = 1
